added title t to mail section

--- a/condottieri_messages/templates/condottieri_messages/base.html
+++ b/condottieri_messages/templates/condottieri_messages/base.html
@@ -4,6 +4,8 @@
 
 {% block extra_head %}{% endblock %}
 
+{% block head_title %}{% trans "Mail" %}{% endblock %}
+
 {% block body_class %}messages{% endblock %}
 {% block rtab_id %}id="messages_tab"{% endblock %}
 
