--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -86,8 +86,8 @@
 	{% if show_users %}
 	<div><a href="{% url profile_detail username=p.user.username %}">{% avatar p.user 20 %}{{ p.user.username }}</a></div>
 	{% endif %}
-	<div>{% trans "Cities:" %} {{ p.number_of_cities }}</div>
-	<div>{% trans "Units:" %} {{ p.number_of_units }}</div>
+	<div>{% trans "Cities:" %} {{ p.number_of_cities }} |
+	{% trans "Units:" %} {{ p.number_of_units }}</div>
 {% if player %}
 	{% ifnotequal game.phase 0 %}
 	{% ifnotequal p player %}
@@ -98,6 +98,9 @@
 		{% ifnotequal p.excommunicated 1 %}
 		<div><a href="{% url excommunicate game.slug p.id %}">{% trans "Excommunicate" %}</a></div>
 		{% endifnotequal %}
+	{% endif %}
+	{% if game.configuration.finances %}
+		<div><a href="{% url lend game.slug p.id %}">{% trans "Give money" %}</a></div>
 	{% endif %}
 	{% endifnotequal %}
 	{% endifnotequal %}
