--- a/condottieri_messages/templates/condottieri_messages/outbox.html
+++ b/condottieri_messages/templates/condottieri_messages/outbox.html
@@ -5,12 +5,14 @@
 {% if message_list %} 
 <table class="messages">
     <thead>
-        <tr><th>{% trans "Game" %}</th><th>{% trans "Recipient" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Sent" %}</th><th>{% trans "Action" %}</th></tr>
+        <tr><th>{% trans "Game" %}</th><th>{% trans "Year" %}</th><th>{% trans "Season" %}</th><th>{% trans "Recipient" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Sent" %}</th><th>{% trans "Action" %}</th></tr>
     </thead>
     <tbody>
 {% for message in message_list %} 
     <tr>
 		<td><a href="{% url show-game message.letter.recipient_player.game.slug %}">{{ message.letter.recipient_player.game.slug }}</a></td>
+        <td>{{ message.letter.year }}</td>
+		<td>{{ message.letter.get_season_display }}</td>
         <td>{{ message.letter.recipient_player.country }}</td>
         <td>
         <a href="{{ message.letter.get_absolute_url }}">{{ message.subject }}</a>
