--- a/condottieri_messages/templates/condottieri_messages/trash.html
+++ b/condottieri_messages/templates/condottieri_messages/trash.html
@@ -5,12 +5,14 @@
 {% if message_list %} 
 <table class="messages">
     <thead>
-        <tr><th>{% trans "Game" %}</th><th>{% trans "Sender" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Date" %}</th><th>{% trans "Action" %}</th></tr>
+        <tr><th>{% trans "Game" %}</th><th>{% trans "Year" %}</th><th>{% trans "Season" %}</th><th>{% trans "Sender" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Date" %}</th><th>{% trans "Action" %}</th></tr>
     </thead>
     <tbody>
 {% for message in message_list %} 
     <tr>
 		<td><a href="{% url show-game message.letter.sender_player.game.slug %}">{{ message.letter.sender_player.game.slug }}</a></td>
+        <td>{{ message.letter.year }}</td>
+		<td>{{ message.letter.get_season_display }}</td>
         <td>{{ message.letter.sender_player.country }}</td>
         <td> 
         {{ message.subject }}
