--- a/media/css/site_tabs.css
+++ b/media/css/site_tabs.css
@@ -5,7 +5,7 @@ body.messages #tab_messages a,
 body.profile #tab_profile a,
 body.notices #tab_notices a,
 body.forum #tab_forum a,
-body.help #tab_help a,
+body.help #tab_help a
 {
     color: #000; /* selected tab text colour */
 }
@@ -14,7 +14,7 @@ body.messages #tab_messages,
 body.profile #tab_profile,
 body.notices #tab_notices,
 body.forum #tab_forum,
-body.help #tab_help,
+body.help #tab_help
 {
     margin: 0; /* to compensate for border */
     padding: 5px 0 5px;
