fixed bug to show mayor cities in scenario detail

--- a/machiavelli/templates/machiavelli/scenario_detail.html
+++ b/machiavelli/templates/machiavelli/scenario_detail.html
@@ -57,7 +57,7 @@
 </tr>
 </thead>
 <tr>
-<td>{{ scenario.city_income_set|join:", " }}</td>
+<td>{{ mayor_cities|join:", " }}</td>
 </tr>
 </table>
 {% endblock %}
