--- a/condottieri_messages/templates/condottieri_messages/inbox.html
+++ b/condottieri_messages/templates/condottieri_messages/inbox.html
@@ -1,16 +1,25 @@
 {% extends "condottieri_messages/base.html" %} 
 {% load i18n %} 
 {% block content %}
-<h1>{% trans "Inbox" %}</h1>
+<h2>{% trans "Inbox" %}</h2>
+{% if game %}
+<h3>{{ game.slug }}</h3>
+{% endif %}
 {% if message_list %} 
 <table class="messages">
     <thead>
-        <tr><th>{% trans "Game" %}</th><th>{% trans "Year" %}</th><th>{% trans "Season" %}</th><th>{% trans "Sender" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Received" %}</th><th>{% trans "Action" %}</th></tr>
+        <tr>
+		{% if not game %}
+		<th>{% trans "Game" %}</th>
+		{% endif %}
+		<th>{% trans "Year" %}</th><th>{% trans "Season" %}</th><th>{% trans "Sender" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Received" %}</th><th>{% trans "Action" %}</th></tr>
     </thead>
     <tbody>
 {% for message in message_list %} 
     <tr>
+		{% if not game %}
 		<td><a href="{% url show-game message.letter.sender_player.game.slug %}">{{ message.letter.sender_player.game.slug }}</a></td>
+		{% endif %}
         <td>{{ message.letter.year }}</td>
 		<td>{{ message.letter.get_season_display }}</td>
 		<td>{{ message.letter.sender_player.country }}</td>
