--- a/condottieri_messages/templates/condottieri_messages/outbox.html
+++ b/condottieri_messages/templates/condottieri_messages/outbox.html
@@ -1,16 +1,26 @@
 {% extends "condottieri_messages/base.html" %} 
 {% load i18n %} 
 {% block content %} 
-<h1>{% trans "Sent Messages" %}</h1>
+<h2>{% trans "Sent Messages" %}</h2>
+{% if game %}
+<h3>{{ game.slug }}</h3>
+{% endif %}
+{% endif %}
 {% if message_list %} 
 <table class="messages">
     <thead>
-        <tr><th>{% trans "Game" %}</th><th>{% trans "Year" %}</th><th>{% trans "Season" %}</th><th>{% trans "Recipient" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Sent" %}</th><th>{% trans "Action" %}</th></tr>
+        <tr>
+		{% if not game %}
+		<th>{% trans "Game" %}</th>
+		{% endif %}
+		<th>{% trans "Year" %}</th><th>{% trans "Season" %}</th><th>{% trans "Recipient" %}</th><th>{% trans "Subject" %}</th><th>{% trans "Sent" %}</th><th>{% trans "Action" %}</th></tr>
     </thead>
     <tbody>
 {% for message in message_list %} 
     <tr>
+		{% if not game %}
 		<td><a href="{% url show-game message.letter.recipient_player.game.slug %}">{{ message.letter.recipient_player.game.slug }}</a></td>
+		{% endif %}
         <td>{{ message.letter.year }}</td>
 		<td>{{ message.letter.get_season_display }}</td>
         <td>{{ message.letter.recipient_player.country }}</td>
