--- a/machiavelli/templates/machiavelli/show_game.html
+++ b/machiavelli/templates/machiavelli/show_game.html
@@ -157,9 +157,9 @@
 
 {% endblock %}
 
-{% block extra_game %}{% endblock %}
 
 {% block extra_body %}
+{% block extra_game %}{% endblock %}
 <script src="{{ STATIC_URL }}js/jquery.mousewheel.js" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}js/jquery.iviewer.min.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -170,8 +170,7 @@
 	function makeLayout() {
 		var MEDIA_URL = "{{ MEDIA_URL }}";
 		var viewer_opts = {
-			//src: MEDIA_URL + "maps/{{ map }}",
-			src: "/media/maps/map-25.jpg",
+			src: MEDIA_URL + "maps/{{ map }}",
 			ui_disabled: true,
 			zoom: "fit",
 			zoom_max: 100,
