--- a/machiavelli/templates/machiavelli/summary.html
+++ b/machiavelli/templates/machiavelli/summary.html
@@ -4,9 +4,19 @@
 {% load forum_tags %}
 {% load game_icons %}
 
-{% block head_title %}{% blocktrans %}Games{% endblocktrans %}{% endblock %}
+{% block head_title %}{% blocktrans %}A Game Of Diplomacy And War{% endblocktrans %}{% endblock %}
 
 {% block body %}
+{% if not user.is_authenticated %}
+<h1>{% trans "Condottieri. A Game Of Diplomacy And War" %}</h1>
+<p>{% blocktrans %}Condottieri is a multiplayer, strategic game based on the classic game "Machiavelli" (a variant of "Diplomacy").{% endblocktrans %}</p>
+
+<p>{% blocktrans %}Condottieri is set in Reinassance Italy, and each player controls one of the powers that struggle to dominate the region. You will have to negotiate with other players in order to achieve this goal. Armies, fleets, garrisons and money are your best arguments in this negotiation. But beware: some of your allies will be willing to betray you for a piece of the cake.{% endblocktrans %}</p>
+
+<p>{% blocktrans %}Condottieri is a turn-based, slow-paced game. A typical game session will last for days or weeks, but you will have to spend only a few minutes every one or two days to play the game. Of course, you can play more than one game at a time.{% endblocktrans %}</p>
+
+{% endif %}
+
 <h1>{% trans "Summary" %}</h1>
 <p>
 {% blocktrans %}This is a list of all the non-finished games in this server. The first are the ones that you are a player in. If a game has empty slots, you can join it. If you can't find any available games, you can also create one, but it's better if you join an existing game.{% endblocktrans %}
