--- a/media/pinax/css/base.css
+++ b/media/pinax/css/base.css
@@ -1,82 +1,31 @@
-/* GENERAL */
-
 html, body {
     height: 100%;
 }
 body {
     background-color: #111;
     margin: 0;
-    color: #BBB;
-    font-family: Arial, Helvetica, Tahoma, sans-serif;
+    color: #fff3ac;
+    font-family: "Helvetica Neue", Arial, sans-serif;
     font-size: 10pt;
 }
+
 a, a:visited {
-    color: #999;
-}
-a:hover {
-	color: #BBB;
+	color: #a87f41;
 }
 img {
-    border: 0;
-}
-p {
-	line-height: 125%;
-	text-indent: 2em;
-}
-dt {
-    font-weight: bold;
+	border: 0;
 }
 table {
     border-collapse: collapse;
     border-spacing: 0;
-    border: solid 1px #444;
+    border: 0;
     font-size: inherit;
-	width: 80%;
-	margin-left: 10%;
 }
-thead {
-	background: #191919;
-	line-height: 2em;
-}
-
 td {
     margin: 0;
     border: 0;
-    padding: 0.4em;
+    padding: 0;
 }
-td.data_c {
-	text-align: center;
-}
-h1 {
-    margin: 0;
-	margin-bottom: 1em;
-	color: #EEE;
-	padding: 0.5em 0 0.3em;
-}
-
-#body {
-    clear: both;
-    margin: 0 auto;
-    padding: 10px;
-    width: 90%;
-	min-width: 1024px;
-	background: #303030;
-	border: 3px solid #444;
-	border-top: none;
-}
-#footer {
-    margin: 50px auto;
-    padding: 10px;
-    clear: both;
-    width: 800px;
-}
-#footer a, #footer a:visited {
-    color: #444; /* footer link colour */
-}
-#footer a:hover {
-    color: #777; /* footer link hover colour */
-}
-
 
 /* CLEARS */
 
@@ -105,46 +54,36 @@ h1 {
 * html .clearfix { height: 1%; }
 /* end hide from ie5-mac */
 
-
 /* HEADER */
-
 #tabhead {
-    background: #111;
-	border-bottom: 1px solid #333; /* tab border */
-    position: relative;
+	position: relative;
+	width: 80%;
+	margin: 0 auto;
+	padding: 0 10px;
+	border-left: solid 2px #666;
+	border-right: solid 2px #666;
 }
-#tabhead .logo {
-    height: 80px;
-    padding-left: 0;
-    padding-top: 0;
-}
-#tabhead .logo img {
-    width: 380px;
-    height: 79px;
-}
+
 #tabhead .login {
     position: absolute;
     top: 6px;
-    right: 15px;
-    color: #888; /* login bar text colour */
+    right: 6px;
 }
 #tabhead .login a, #tabhead .login a:visited {
-    color: #888; /* login bar link colour */
-}
-#tabhead .login a:hover {
-	background: #191919;
-    color: #BBB; /* login bar link hover colour */
 }
 
-#locale_switcher {
-    display: inline;
+#tabhead .login a:hover {
+    color: #FFF; /* login bar link hover colour */
 }
 
 #subnav {
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    padding: 0 10px;
+	width: 80%;
     background: #191919; /* tab colour */
-    border-bottom: 1px solid #444;
+    border-bottom: 1px solid #666;
+	border-left: solid 2px #666;
+	border-right: solid 2px #666;
 }
 #subnav ul {
     float: right;
@@ -159,122 +98,84 @@ h1 {
     float: left;
     font-weight: bold;
     text-decoration: none;
-    color: #ccc;
-	background-color: #191919;
     padding: 4px 20px;
 }
 #subnav ul a:hover {
     color: #FFF;
-    background: #2A2A2A;
+    background: #303030;
 }
 
-
-/* FORMS */
-
-form th {
-    text-align : left;
-}
-form.signup input[type="submit"], form.login input[type="submit"] {
-    margin: 20px 0;
-    font-size: 14pt;
-}
-input[type="text"], input[type="password"], textarea {
-    padding: 3px;
-    margin: 3px;
-    border: solid 1px #C6C6C6;
-    border-bottom: solid 1px #E3E3E3;
-    color: #666;
-    font-size: 12pt;
-    background: #F3F3F3 url('../images/form-shadow.png') left top repeat-x;
-}
-ul.errorlist {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    color: red;
+#body {
+	clear: both;
+	margin: 0 auto;
+	padding: 10px;
+	width: 80%;
+	background: #3a3a3a;
+	color: #fff3d3;
+	border-left: solid 2px #666;
+	border-right: solid 2px #666;
 }
 
-form p {
-	line-height: 2em;
+#body h1 {
+	line-height: 30px;
+	font-size: 20px;
+	font-weight: 100;
 }
 
-/* MESSAGES */
-
-ul#messages {
-    margin: 0 0 10px 0;
-    padding: 0;
-    list-style: none;
-}
-ul#messages li {
-    padding: 5px 10px;
-    background: #efd;
-	color: #693;
-    margin: 3px;
-    border: 1px solid #BC9;
-}
-ul#messages li a {
-    float: right;
-    color: #693;
+#body h2 {
+	line-height: 20px;
+	font-size: 16px;
+	font-weight: 100;
+	margin-top: 2em;
 }
 
-
-/* WHAT NEXT */
-
-dl.what_next {
-    margin: 2em;
-}
-dl.what_next dt {
-    font-size: 120%;
-}
-dl.what_next dd {
-    margin: 0 0 1em 0;
-    font-style: italic;
-}
-p.what_next {
-    font-size: 120%;
+#body h3 {
+	font-size: 12px;
+	font-weight: bold;
+	margin-left: 3em;
 }
 
-
-/* FORM TOGGLE */
-
-.form-toggle p {
-    margin-bottom: 2px;
+#body p {
+	width: 80%;
+	margin-left: 3em;
 }
 
-.form-toggle p span {
-    background: #DEF;
-    padding: 3px 6px;
-    border-top: 1px solid #9BC;
-    border-left: 1px solid #9BC;
-    border-right: 1px solid #9BC;
-    cursor: pointer;
+#body li {
+	list-style-position: inside;
+	padding-left: 1em;
 }
 
-.form-toggle form {
-    padding: 3px 6px;
-    margin: 0;
-    background: #DEF;
-    border: 1px solid #9BC;
+#body ul li {
+	list-style-type: square;
 }
 
-
-
-/* EXTRAS TO CLEAN UP */
-
-.warning {
-    color: red;
-    font-weight: bold;
+#body table {
+	border: solid 1px #999;
 }
 
-div.profile_info p {
-    margin: 0;
+#body table thead {
+	border-bottom: solid 1px #999;
 }
-div.left_panel {
-    width: 550px;
+
+#body thead th {
+	text-align: center;
+	background: #191919;
+	padding: 0.5em;
 }
-div.right_panel {
-    margin-top: 20px;
-    width: 200px;
-    float: right;
-    z-index: 999;
+
+#body td {
+	padding: 0.5em;
+}
+
+#body td.data_c {
+	text-align: center;
+}
+
+#footer {
+	width: 80%;
+	margin: 0 auto;
+	padding: 10px 10px;
+	background: #191919;
+	border-left: solid 2px #666;
+	border-right: solid 2px #666;
 }
