--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -33,6 +33,7 @@
 {% block right_tabs %}
         <ul class="tabs">{% spaceless %}
 			<li id="tab_machiavelli"><a href="{% url summary %}">{% trans "Games" %}</a></li>
+			<li><a href="{% url hall-of-fame %}">{% trans "Hall of Fame" %}</a></li>
 			{% if user.is_authenticated %}
 			<li id="tab_messages"><a href="{% url messages_inbox %}">{% trans "Mail" %}
 			({{ messages_inbox_count }})</a></li>
