added sidebar to some templates

--- a/machiavelli/templates/machiavelli/game_form.html
+++ b/machiavelli/templates/machiavelli/game_form.html
@@ -6,7 +6,7 @@
 
 {% block head_title %}{% blocktrans %}Games{% endblocktrans %}{% endblock %}
 
-{% block body %}
+{% block left_column %}
 <h1>{% trans "New game" %}</h1>
 <p>{% blocktrans %}Here you can create a new game. You will be the first player of any game
 you create. You must choose a short name for the game, that will be used only to identify it.{% endblocktrans %}</p>
