--- a/machiavelli/templates/machiavelli/game_list_finished.html
+++ b/machiavelli/templates/machiavelli/game_list_finished.html
@@ -7,7 +7,7 @@
 {% blocktrans %}Finished games{% endblocktrans %}
 {% endblock %}
 
-{% block body %}
+{% block left_column %}
 {% if only_user %}
 <h1>{% trans "Your finished games" %}</h1>
 <p>
