--- a/machiavelli/templates/machiavelli/game_list_pending.html
+++ b/machiavelli/templates/machiavelli/game_list_pending.html
@@ -7,7 +7,7 @@
 {% blocktrans %}Pending games{% endblocktrans %}
 {% endblock %}
 
-{% block body %}
+{% block left_column %}
 {% if joinable %}
 <h1>{% trans "Games you can join" %}</h1>
 	<p>
