--- a/machiavelli/templates/machiavelli/scenario_list.html
+++ b/machiavelli/templates/machiavelli/scenario_list.html
@@ -4,7 +4,7 @@
 
 {% block head_title %}{% trans "Scenarios" %}{% endblock %}
 
-{% block body %}
+{% block left_column %}
 <h1>{% trans "Scenarios" %}</h1>
 <table>
 <thead><tr>
