--- a/machiavelli/templates/machiavelli/game_list_my_active.html
+++ b/machiavelli/templates/machiavelli/game_list_my_active.html
@@ -28,6 +28,26 @@
 <dl>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario player.game.scenario.pk %}">{{ player.game.scenario.title }}</a></dd>
 <dt>{% trans "Turn" %}</dt><dd>{{ player.game.get_season_display }}, {{ player.game.year }} - {{ player.game.get_phase_display }}</dd>
+<dt>{% trans "Your status" %}</dt>
+{% if player.done %}
+	<dd>{% trans "You have completed your actions." %}</dd>
+	<dt>{% trans "Time left" %}</dt><dd>{{ player.game.next_phase_change|timeuntil }}</dd>
+{% else %}
+	<dd class="{{ player.get_time_status }}">
+	{% ifequal player.game.phase 1 %}
+		{% trans "You must adjust your units." %}
+	{% endifequal %}
+	{% ifequal player.game.phase 2 %}
+		{% trans "You must give your orders." %}
+	{% endifequal %}
+	{% ifequal player.game.phase 3 %}
+		{% trans "You must retreat some units." %}
+	{% endifequal %}
+	</dd>
+	<dt>{% trans "Time to get karma" %}</dt><dd>{{ player.game.get_bonus_deadline|timeuntil }}</dd>
+	<dt>{% trans "Safe time to play" %}</dt><dd>{{ player.next_phase_change|timeuntil }}</dd>
+	<dt>{% trans "Unsafe time to play" %}</dt><dd>{{ player.game.next_phase_change|timeuntil }}</dd>
+{% endif %}
 <dt>{% trans "Players" %}</dt>
 <dd>
 	{% if player.game.visible %}
