--- a/machiavelli/templates/machiavelli/game_list_my_active.html
+++ b/machiavelli/templates/machiavelli/game_list_my_active.html
@@ -22,7 +22,7 @@
 
 {% for player in player_list.object_list %}
 <div class="game_info">
-<h2 style="background: #191919 url('{{ STATIC_URL }}machiavelli/img/banner-{{ player.country.static_name }}.png') no-repeat top right"><span>
+<h2 style="background: #191919 url('{{ STATIC_URL }}machiavelli/img/badge-{{ player.country.static_name }}.png') no-repeat top right"><span>
 	<a href="{{ player.game.get_absolute_url }}">{{ player.game.slug }}</a>
 </span></h2>
 <dl>
