--- a/media/pinax/css/base.css
+++ b/media/pinax/css/base.css
@@ -72,6 +72,7 @@ ol, ul {
 	padding: 0 10px;
 	border-left: solid 2px #666;
 	border-right: solid 2px #666;
+	border-bottom: solid 2px #9f2727;
 }
 
 #tabhead .login {
@@ -96,8 +97,8 @@ ol, ul {
 	border-right: solid 2px #666;
 }
 #subnav ul {
-    float: right;
-    margin: 0 20px;
+    float: left;
+    margin: 0;
     padding: 0;
 }
 #subnav ul li {
@@ -109,6 +110,7 @@ ol, ul {
     font-weight: bold;
     text-decoration: none;
     padding: 4px 20px;
+	border-right: solid 1px #666;
 }
 #subnav ul a:hover {
     color: #FFF;
