--- a/machiavelli/templates/machiavelli/game_list_pending.html
+++ b/machiavelli/templates/machiavelli/game_list_pending.html
@@ -35,15 +35,13 @@
 <div class="game_info">
 <h2><span><a href="{{ game.get_absolute_url }}">{{ game.slug }}</a></span>
 	<span>
-		{% if joinable %}
-		<a href="{% url join-game game.slug %}">{% trans "Join game" %}</a>
-		{% endif %}
-		({{ game.slots }})
+		({% trans "Slots" %}: {{ game.slots }})
 	</span></h2>
 <dl>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></dd>
 <dt>{% trans "Time limit" %}</dt><dd>{{ game.get_time_limit_display }}</dd>
 <dt>{% trans "Rules" %}</dt><dd>{% rule_icons game.configuration %}</dd>
+<dt>{% trans "Creator" %}</dt><dd>{{ game.created_by.username }}</dd>
 <dt>{% trans "Players" %}</dt>
 <dd>
 	{% if game.visible %}
@@ -59,6 +57,14 @@
 	{% endif %}
 </dd>
 </dl>
+<ul class="section_menu">
+	<li><a href="{% url show-game game.slug %}">{% trans "View game" %}</a></li>
+	{% if joinable %}
+	<li><a href="{% url join-game game.slug %}">{% trans "Join game" %}</a></li>
+	{% else %}
+	<li><a href="{% url leave-game game.slug %}">{% trans "Leave game" %}</a></li>
+	{% endif %}
+</ul>
 </div>
 {% endfor %}
 
