--- a/machiavelli/templates/machiavelli/game_list_active.html
+++ b/machiavelli/templates/machiavelli/game_list_active.html
@@ -35,6 +35,10 @@
 	{% endif %}
 </dd>
 </dl>
+<ul class="section_menu">
+	<li><a href="{% url show-game game.slug %}">{% trans "View game" %}</a></li>
+	<li><a href="{% url game-log game.slug %}">{% trans "Log" %}</a></li> 
+</ul>
 </div>
 {% endfor %}
 
