--- a/machiavelli/templates/machiavelli/game_list_my_active.html
+++ b/machiavelli/templates/machiavelli/game_list_my_active.html
@@ -63,7 +63,12 @@
 	{% endif %}
 </dd>
 </dl>
-
+<ul class="section_menu">
+	<li><a href="{% url show-game player.game.slug %}">{% trans "View game" %}</a></li>
+	<li><a href="{% url game-log player.game.slug %}">{% trans "Log" %}</a></li> 
+	<li><a href="{% url condottieri_messages_inbox player.game.slug %}">{% trans "Inbox" %}</a></li>
+	<li><a href="{% url condottieri_messages_outbox player.game.slug %}">{% trans "Outbox" %}</a></li>
+</ul>
 </div>
 {% endfor %}
 
