added menu to finished games list

--- a/machiavelli/templates/machiavelli/game_list_finished.html
+++ b/machiavelli/templates/machiavelli/game_list_finished.html
@@ -46,6 +46,9 @@
 {% endif %}
 </dd>
 </dl>
+<ul class="section_menu">
+	<li><a href="{% url show-game game.slug %}">{% trans "View scores" %}</a></li>
+</ul>
 </div>
 {% endfor %}
 
