--- a/machiavelli/templates/machiavelli/game_list_active.html
+++ b/machiavelli/templates/machiavelli/game_list_active.html
@@ -17,6 +17,9 @@
 {% for game in game_list.object_list %}
 <div class="game_info">
 <h2><span><a href="{{ game.get_absolute_url }}">{{ game.slug }}</a></span></h2>
+<div class="map">
+<img src="{{ MEDIA_URL }}maps/thumbnails/map-{{ game.pk }}.jpg" />
+</div>
 <dl>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></dd>
 <dt>{% trans "Turn" %}</dt><dd>{{ game.get_season_display }}, {{ game.year }} - {{ game.get_phase_display }}</dd>
