--- a/machiavelli/templates/machiavelli/game_list_my_active.html
+++ b/machiavelli/templates/machiavelli/game_list_my_active.html
@@ -25,6 +25,9 @@
 <h2 style="background: #191919 url('{{ STATIC_URL }}machiavelli/img/badge-{{ player.country.static_name }}.png') no-repeat top right"><span>
 	<a href="{{ player.game.get_absolute_url }}">{{ player.game.slug }}</a>
 </span></h2>
+<div class="map">
+<img src="{{ MEDIA_URL }}maps/thumbnails/map-{{ player.game.pk }}.jpg" />
+</div>
 <dl>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario player.game.scenario.pk %}">{{ player.game.scenario.title }}</a></dd>
 <dt>{% trans "Turn" %}</dt><dd>{{ player.game.get_season_display }}, {{ player.game.year }} - {{ player.game.get_phase_display }}</dd>
