--- a/machiavelli/templates/machiavelli/game_list_finished.html
+++ b/machiavelli/templates/machiavelli/game_list_finished.html
@@ -26,6 +26,9 @@
 {% for game in game_list.object_list %}
 <div class="game_info">
 <h2><span><a href="{{ game.get_absolute_url }}">{{ game.slug }}</a></span></h2>
+<div class="map">
+<img src="{{ MEDIA_URL }}maps/thumbnails/map-{{ player.game.pk }}.jpg" />
+</div>
 <dl>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></dd>
 <dt>{% trans "Rules" %}</dt><dd>{% rule_icons game.configuration %}</dd>
