--- a/machiavelli/templates/machiavelli/base.html
+++ b/machiavelli/templates/machiavelli/base.html
@@ -46,6 +46,8 @@
 {% endfor %}
 </ol>
 </div>
-
+<div style="text-align: center">
+<a href="http://www.twitter.com/condottierigame"><img src="http://twitter-badges.s3.amazonaws.com/twitter-a.png" alt="Follow condottierigame on Twitter"/></a>
+</div>
 </div>
 {% endblock %}
