show started and finished dates in game lists

--- a/media/pinax/css/base.css
+++ b/media/pinax/css/base.css
@@ -315,6 +315,11 @@ ul#messages li {
 	line-height: 48px;
 }
 
+.game_info .time {
+	margin-left: 1em;
+	font-size: 80%;
+}
+
 .game_info dl {
 	margin: 1em 1em 1em;
 }
