--- a/machiavelli/templates/machiavelli/game_list_active.html
+++ b/machiavelli/templates/machiavelli/game_list_active.html
@@ -20,6 +20,11 @@
 <div class="map">
 <img src="{{ MEDIA_URL }}maps/thumbnails/map-{{ game.pk }}.jpg" />
 </div>
+{% if game.started %}
+<div class="time">
+{% blocktrans with game.started|timesince as time %}Started {{ time }} ago{% endblocktrans %}
+</div>
+{% endif %}
 <dl>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></dd>
 <dt>{% trans "Turn" %}</dt><dd>{{ game.get_season_display }}, {{ game.year }} - {{ game.get_phase_display }}</dd>
