--- a/machiavelli/templates/machiavelli/game_list_finished.html
+++ b/machiavelli/templates/machiavelli/game_list_finished.html
@@ -29,6 +29,12 @@
 <div class="map">
 <img src="{{ MEDIA_URL }}maps/thumbnails/map-{{ game.pk }}.jpg" />
 </div>
+{% if game.started and game.finished %}
+<div class="time">
+{% blocktrans with game.finished|date:"SHORT_DATE_FORMAT" as finished game.started|timeuntil:game.finished as time %}
+Finished on {{ finished }} after {{ time }}.{% endblocktrans %}
+</div>
+{% endif %}
 <dl>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></dd>
 <dt>{% trans "Rules" %}</dt><dd>{% rule_icons game.configuration %}</dd>
