--- a/machiavelli/templates/machiavelli/game_list_my_active.html
+++ b/machiavelli/templates/machiavelli/game_list_my_active.html
@@ -28,6 +28,11 @@
 <div class="map">
 <img src="{{ MEDIA_URL }}maps/thumbnails/map-{{ player.game.pk }}.jpg" />
 </div>
+{% if player.game.started %}
+<div class="time">
+{% blocktrans with player.game.started|timesince as time %}Started {{ time }} ago{% endblocktrans %}
+</div>
+{% endif %}
 <dl>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario player.game.scenario.pk %}">{{ player.game.scenario.title }}</a></dd>
 <dt>{% trans "Turn" %}</dt><dd>{{ player.game.get_season_display }}, {{ player.game.year }} - {{ player.game.get_phase_display }}</dd>
