fixed bug in revolutions link

--- a/machiavelli/templates/machiavelli/summary.html
+++ b/machiavelli/templates/machiavelli/summary.html
@@ -81,7 +81,7 @@
 </p>
 {% for r in revolutions %}
 	<div class="mini_game">
-	<h3><a href="{% url show-game r.government.game %}">{{ r.government.game.slug }}</a></h3>
+	<h3><a href="{% url show-game r.government.game.slug %}">{{ r.government.game.slug }}</a></h3>
 	<ul><li>{{ r.government.country }} | <a href="{% url overthrow r.pk %}">{% trans "Overthrow" %}</a></li></ul>
 	</div>
 {% endfor %}
