--- a/machiavelli/templates/machiavelli/base.html
+++ b/machiavelli/templates/machiavelli/base.html
@@ -49,5 +49,12 @@
 <div style="text-align: center">
 <a href="http://www.twitter.com/condottierigame"><img src="http://twitter-badges.s3.amazonaws.com/twitter-a.png" alt="Follow condottierigame on Twitter"/></a>
 </div>
+<div style="text-align: center">
+<g:plusone size="tall"></g:plusone>
 </div>
+</div>
+{% endblock %}
+
+{% block extra_body %}
+<script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
 {% endblock %}
