--- a/machiavelli/templates/machiavelli/game_list_finished.html
+++ b/machiavelli/templates/machiavelli/game_list_finished.html
@@ -37,6 +37,7 @@ Finished on {{ finished }} after {{ time }}.{% endblocktrans %}
 {% endif %}
 <dl>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario game.scenario.pk %}">{{ game.scenario.title }}</a></dd>
+<dt>{% trans "Cities to win" %}</dt><dd>{{ game.cities_to_win }}</dd>
 <dt>{% trans "Rules" %}</dt><dd>{% rule_icons game.configuration %}</dd>
 <dt>{% trans "Players" %}</dt>
 <dd>
