--- a/machiavelli/templates/machiavelli/game_list_my_active.html
+++ b/machiavelli/templates/machiavelli/game_list_my_active.html
@@ -35,6 +35,7 @@
 {% endif %}
 <dl>
 <dt>{% trans "Scenario" %}</dt><dd><a href="{% url show-scenario player.game.scenario.pk %}">{{ player.game.scenario.title }}</a></dd>
+<dt>{% trans "Cities to win" %}</dt><dd>{{ game.cities_to_win }}</dd>
 <dt>{% trans "Turn" %}</dt><dd>{{ player.game.get_season_display }}, {{ player.game.year }} - {{ player.game.get_phase_display }}</dd>
 <dt>{% trans "Your status" %}</dt>
 {% if player.done %}
